--- a/myreader-backend/src/test/resources/application.properties
+++ b/myreader-backend/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.main.banner-mode=off
 
-spring.datasource.url=jdbc:hsqldb:data/hsqldb/myreader;shutdown=true;hsqldb.default_table_type=cached;hsqldb.defrag_limit=2;hsqldb.nio_data_file=false
+spring.datasource.url=jdbc:hsqldb:mem:test
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
@@ -8,28 +8,16 @@ spring.mandatory-file-encoding=UTF-8
 
 spring.hateoas.use-hal-as-default-json-media-type=false
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
+spring.jpa.properties.hibernate.search.default.directory_provider=ram
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
 spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
-
-server.context-path=/myreader
-server.port=19340
-server.address=127.0.0.1
 
 spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
-remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
-
-# 1 minute timeout
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
-
-# 30 minutes
-hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=1800000
-
-# open circuit when one requests fail
-hystrix.command.default.circuitBreaker.requestVolumeThreshold=1
+remember-me.key=testKey
