--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=MyReader
+
 spring.main.banner-mode=off
 
 spring.datasource.url=jdbc:hsqldb:data/hsqldb/myreader;shutdown=true;hsqldb.default_table_type=cached;hsqldb.defrag_limit=2;hsqldb.nio_data_file=false
@@ -24,6 +26,8 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
 remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
+
+myreader.hystrix.stream.allowed-ip=127.0.0.1
 
 # 1 minute timeout
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
