Introduced fetch error logs and new admin view for Feed management

--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -75,3 +75,14 @@ bootRun {
 springBoot {
     executable = true
 }
+
+
+tasks.matching {it instanceof Test}.all {
+    testLogging.events = ["failed", "passed", "skipped"]
+}
+
+test {
+    testLogging {
+        exceptionFormat = 'full'
+    }
+}
