--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
+job.fetchError.retainInDays=7
+
 remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
 
 myreader.hystrix.stream.allowed-ip=127.0.0.1
