--- a/myreader-backend/src/test/resources/application.properties
+++ b/myreader-backend/src/test/resources/application.properties
@@ -26,6 +26,8 @@ spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
+job.fetchError.retainInDays=7
+
 remember-me.key=testKey
 
 myreader.hystrix.stream.allowed-ip=127.0.0.1
