--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -3,28 +3,30 @@
   "description": "Myreader frontend package",
   "dependencies": {
     "angular": "1.5.8",
+    "angular-aria": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-messages": "1.5.8",
     "angular-animate": "1.5.8",
     "angular-ui-router": "0.2.15",
     "ui-router-extras": "0.0.14",
     "angular-material": "1.0.9",
-    "angular-local-storage": "0.1.5",
+    "angular-local-storage": "0.5.2",
     "angular-cache": "4.2.0",
     "moment": "2.7.0",
     "angular-hotkeys": "1.5.0",
     "mousetrap": "1.5.3"
   },
   "devDependencies": {
-    "karma": "0.12.17",
-    "karma-jasmine": "0.3.6",
+    "karma": "1.4.0",
+    "karma-jasmine": "1.1.0",
     "karma-phantomjs-launcher": "1.0.0",
     "karma-junit-reporter": "~0.2.2",
-    "karma-ng-json2js-preprocessor": "~0.1.1",
+    "karma-ng-json2js-preprocessor": "2.0.1",
     "karma-ng-scenario": "~0.1.0",
     "karma-coverage": "~0.4.2",
 
-    "gulp": "3.8.7",
+    "jasmine-core": "2.5.2",
+    "gulp": "3.9.1",
     "gulp-base64": "0.1.3",
     "gulp-html-replace": "1.5.1",
     "gulp-minify-css": "0.3.7",
