--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -26,8 +26,6 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-hateoas'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard'
     compile group: 'org.springframework.security', name: 'spring-security-data'
     compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.4.0.Final'
     compile group: 'org.hsqldb', name: 'hsqldb'
@@ -37,6 +35,7 @@ dependencies {
     }
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
+    compile group: 'com.google.guava', name: 'guava', version: '21.0'
     compile project(':myreader-frontend')
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
