--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -2,56 +2,54 @@
   "name": "myreader-frontend",
   "description": "Myreader frontend package",
   "scripts": {
-    "gulpClean": "gulp clean",
-    "test": "gulp test",
-    "build": "gulp build"
+    "build": "rimraf dist && webpack --bail --progress --profile",
+    "server": "webpack-dev-server --history-api-fallback --inline --progress",
+    "test": "karma start",
+    "test-watch": "karma start --auto-watch --no-single-run",
+    "start": "npm run server"
   },
   "dependencies": {
     "angular": "1.5.8",
-    "angular-aria": "1.5.8",
-    "angular-sanitize": "1.5.8",
-    "angular-messages": "1.5.8",
     "angular-animate": "1.5.8",
-    "angular-ui-router": "0.2.15",
-    "ui-router-extras": "0.0.14",
-    "angular-material": "1.0.9",
-    "angular-local-storage": "0.5.2",
+    "angular-aria": "1.5.8",
     "angular-cache": "4.2.0",
-    "moment": "2.7.0",
     "angular-hotkeys": "1.5.0",
-    "mousetrap": "1.5.3"
+    "angular-local-storage": "0.5.2",
+    "angular-material": "1.0.9",
+    "angular-messages": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "angular-ui-router": "0.2.15",
+    "moment": "2.7.0",
+    "mousetrap": "1.5.3",
+    "ui-router-extras": "0.0.14"
   },
   "devDependencies": {
-    "karma": "1.4.0",
-    "karma-jasmine": "1.1.0",
-    "karma-phantomjs-launcher": "1.0.0",
-    "karma-junit-reporter": "~0.2.2",
-    "karma-ng-json2js-preprocessor": "2.0.1",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-coverage": "~0.4.2",
-
+    "angular-mocks": "1.5.8",
+    "css-loader": "0.28.0",
+    "extract-text-webpack-plugin": "2.1.0",
+    "favicons-webpack-plugin": "0.0.7",
+    "file-loader": "0.11.1",
+    "html-webpack-plugin": "2.28.0",
+    "istanbul-instrumenter-loader": "2.0.0",
     "jasmine-core": "2.5.2",
-    "gulp": "3.9.1",
-    "gulp-base64": "0.1.3",
-    "gulp-html-replace": "1.5.1",
-    "gulp-minify-css": "0.3.7",
-    "gulp-uglify": "0.3.1",
-    "gulp-concat": "2.6.0",
-    "gulp-minify-html": "1.0.4",
-    "gulp-sequence": "0.4.1",
-    "gulp-rev": "6.0.1",
-    "gulp-util": "3.0.6",
-    "gulp-add-src": "0.2.0",
-    "del": "2.0.1",
-    "gulp-html-src": "1.0.0",
-    "gulp-debug": "*",
-    "gulp-angular-embed-templates": "2.3.0",
-    "phantomjs-prebuilt": "2.1.7",
-    "through2": "2.0.0",
-    "vinyl-paths": "2.0.0",
+    "karma": "1.6.0",
+    "karma-coverage": "~0.4.2",
+    "karma-jasmine": "1.1.0",
+    "karma-junit-reporter": "~0.2.2",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "2.0.3",
+    "node-libs-browser": "2.0.0",
+    "null-loader": "0.1.1",
+    "optimize-css-assets-webpack-plugin": "1.3.1",
     "path": "0.12.7",
-
-    "angular-mocks": "1.5.8"
+    "phantomjs-prebuilt": "2.1.14",
+    "raw-loader": "0.5.1",
+    "rimraf": "2.6.1",
+    "style-loader": "0.16.1",
+    "webpack": "2.4.1",
+    "webpack-dev-server": "2.4.1"
   },
   "directories": {
     "test": "test"
