:copyFrontend depends on :myreader-frontend:build

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ task devRun() {
     }
 }
 
-task copyFrontend(type: Sync) {
+task copyFrontend(type: Sync, dependsOn: ':myreader-frontend:build') {
     from project(':myreader-frontend').file('dist')
     into project(':myreader-backend').buildDir.absolutePath + '/classes/main/static'
 }
