--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "angular-mocks": "1.5.8",
     "css-loader": "0.28.0",
+    "cssnano": "3.10.0",
     "extract-text-webpack-plugin": "2.1.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.11.1",
