Fix path to sonar.javascript.lcov.reportPath file

--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -31,6 +31,6 @@ sonarqube {
     properties {
         property "sonar.sources", "${projectDir}/src"
         property "sonar.tests", "${projectDir}/test"
-        property "sonar.javascript.lcov.reportPath", "{buildDir}/reports/istanbul/PhantomJS 2.1.1 (Linux 0.0.0)/lcov.info"
+        property "sonar.javascript.lcov.reportPath", "${buildDir}/reports/istanbul/PhantomJS 2.1.1 (Linux 0.0.0)/lcov.info"
     }
 }
