--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -18,8 +18,7 @@
     "angular-sanitize": "1.5.8",
     "angular-ui-router": "0.2.15",
     "moment": "2.7.0",
-    "mousetrap": "1.5.3",
-    "ui-router-extras": "0.0.14"
+    "mousetrap": "1.5.3"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
