--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,8 +17,7 @@
     "angular-messages": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-ui-router": "0.2.15",
-    "moment": "2.7.0",
-    "mousetrap": "1.5.3"
+    "moment": "2.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
