Ignore script files related to tests in Sonarqube.

--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -31,7 +31,7 @@ sonarqube {
     properties {
         property "sonar.sources", "${projectDir}/src"
         property "sonar.tests", "${projectDir}/test"
-        property "sonar.exclusions", "**/*.spec.js"
+        property "sonar.exclusions", ["**/*.spec.js", "**/test-**.js"]
         property "sonar.javascript.lcov.reportPath", "${buildDir}/reports/istanbul/PhantomJS 2.1.1 (Linux 0.0.0)/lcov.info"
     }
 }
