--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,7 +17,7 @@
     "angular-messages": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-ui-router": "0.2.15",
-    "moment": "2.7.0"
+    "timeago.js": "3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
