--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -22,16 +22,16 @@
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
-    "css-loader": "0.28.0",
+    "css-loader": "0.28.4",
     "cssnano": "3.10.0",
-    "extract-text-webpack-plugin": "2.1.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "0.11.1",
-    "html-webpack-plugin": "2.28.0",
+    "file-loader": "0.11.2",
+    "html-webpack-plugin": "2.29.0",
     "istanbul-instrumenter-loader": "2.0.0",
-    "jasmine-core": "2.5.2",
-    "karma": "1.6.0",
-    "karma-coverage": "~0.4.2",
+    "jasmine-core": "2.6.4",
+    "karma": "1.7.0",
+    "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
@@ -39,14 +39,14 @@
     "karma-webpack": "2.0.3",
     "node-libs-browser": "2.0.0",
     "null-loader": "0.1.1",
-    "optimize-css-assets-webpack-plugin": "1.3.1",
+    "optimize-css-assets-webpack-plugin": "2.0.0",
     "path": "0.12.7",
     "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
-    "style-loader": "0.16.1",
-    "webpack": "2.4.1",
-    "webpack-dev-server": "2.4.1",
+    "style-loader": "0.18.2",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "2.5.0",
     "svg-url-loader": "2.1.1"
   },
   "directories": {
