Switch from PhantomJS to headless Chrome.

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -33,14 +33,13 @@
     "karma": "1.7.1",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
-    "karma-phantomjs-launcher": "1.0.4",
+    "karma-chrome-launcher": "2.2.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-sonarqube-unit-reporter": "0.0.13",
     "karma-webpack": "2.0.5",
     "node-libs-browser": "2.0.0",
     "null-loader": "0.1.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
-    "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.2",
     "style-loader": "0.19.0",
