--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -6,7 +6,8 @@
     "server": "webpack-dev-server --history-api-fallback --inline --progress",
     "test": "karma start",
     "test-watch": "npm test -- --single-run=false --reporters=progress,coverage",
-    "start": "npm run server"
+    "start": "npm run server",
+    "report": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
     "angular": "1.5.8",
@@ -31,11 +32,11 @@
     "istanbul-instrumenter-loader": "3.0.0",
     "jasmine-core": "2.8.0",
     "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-sourcemap-loader": "0.3.7",
     "karma-sonarqube-unit-reporter": "0.0.13",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.5",
     "node-libs-browser": "2.0.0",
     "null-loader": "0.1.1",
@@ -43,9 +44,10 @@
     "raw-loader": "0.5.1",
     "rimraf": "2.6.2",
     "style-loader": "0.19.0",
+    "svg-url-loader": "2.2.1",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.3",
-    "svg-url-loader": "2.2.1"
+    "webpack-bundle-analyzer": "2.9.0",
+    "webpack-dev-server": "2.9.3"
   },
   "directories": {
     "test": "test"
