--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -33,7 +33,7 @@
     "jasmine-core": "2.8.0",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage": "1.1.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-sonarqube-unit-reporter": "0.0.13",
     "karma-sourcemap-loader": "0.3.7",
