--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -5,7 +5,7 @@
     "build": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile",
     "server": "export NODE_ENV=development && webpack-dev-server --history-api-fallback --inline --progress",
     "test": "export NODE_ENV=development && karma start",
-    "test-watch": "export NODE_ENV=development && npm test -- --single-run=false --reporters=progress,coverage",
+    "test-watch": "export NODE_ENV=development && npm test -- --single-run=false --reporters=progress,coverage-istanbul",
     "start": "npm run server",
     "report": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json"
   },
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
     "extract-text-webpack-plugin": "3.0.1",
