Change sonar.javascript.lcov.reportPath to sonar.javascript.lcov.reportPaths.

--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -33,7 +33,7 @@ sonarqube {
         property "sonar.exclusions", ["**/*.spec.js", "**/test-utils.js"]
         property "sonar.tests", ["${projectDir}/test", "${projectDir}/src/app/js"]
         property "sonar.test.inclusions", ["**/*.spec.js", "**Tests.js"]
-        property "sonar.javascript.lcov.reportPath", "${buildDir}/reports/istanbul/lcov.info"
+        property "sonar.javascript.lcov.reportPaths", "${buildDir}/reports/istanbul/lcov.info"
         property "sonar.testExecutionReportPaths", "${buildDir}/TESTS.xml"
     }
 }
