Convert code base to es6.

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -25,6 +25,7 @@
     "angular-mocks": "1.5.8",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-angularjs-annotate": "0.8.2",
     "babel-preset-env": "1.6.1",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
