Travis CI: Add git fetch --unshallow to script phase in order to calculate blame information for SonarQube.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,5 @@ cache:
 install: true
 
 script:
+  - git fetch --unshallow # necessary for SonarQube blame information
   - ./gradlew check sonarqube
