--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -18,8 +18,11 @@
     "angular-messages": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-ui-router": "0.2.15",
-    "timeago.js": "3.0.1",
-    "material-design-icons": "3.0.1"
+    "material-design-icons": "3.0.1",
+    "ng-redux": "3.5.2",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "timeago.js": "3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8",
