--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -51,6 +51,7 @@
     "null-loader": "0.1.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "raw-loader": "0.5.1",
+    "redux-mock-store": "1.3.0",
     "rimraf": "2.6.2",
     "style-loader": "0.19.0",
     "svg-url-loader": "2.2.1",
