--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -47,6 +47,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.5",
     "lodash.ismatch": "4.4.0",
+    "lodash.merge": "4.6.0",
     "node-libs-browser": "2.0.0",
     "null-loader": "0.1.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
