--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'pmd'
 apply plugin: 'findbugs'
 
@@ -67,6 +67,7 @@ jacocoTestReport {
 springBoot {
     buildInfo()
     executable = true
+    backupSource = false
 }
 
 task startServer(type: SpawnProcessTask) {
