--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,10 @@ cache:
     - $TRAVIS_BUILD_DIR/myreader-frontend/node_modules/
     - $HOME/.sonar/cache
 
-# skip installation step
-install: true
+install:
+  - ./gradlew resolve
 
 script:
-  - git fetch --unshallow # necessary for SonarQube blame information
-  - travis_wait 20 ./gradlew check sonarqube
+  - travis_wait 20 ./gradlew dependencyCheckAnalyze
+  - git fetch --unshallow # necessary for SonarCloud blame information
+  - ./gradlew check sonarqube
