--- a/build.gradle
+++ b/build.gradle
@@ -87,3 +87,19 @@ sonarqube {
         property "sonar.links.scm_dev", "scm:git:git@github.com:ksokol/myreader.git"
     }
 }
+
+ext.resolveDependencies = {project ->
+    def resolve = {configuration ->
+        def nonResolveableConfigurations = ['apiElements', 'implementation',
+                                            'runtimeElements', 'runtimeOnly',
+                                            'testImplementation', 'testRuntimeOnly',
+                                            'generatedImplementation', 'generatedRuntimeOnly']
+
+        if (!nonResolveableConfigurations.contains(configuration.getName())) {
+            configuration.resolve()
+        }
+    }
+
+    project.buildscript.configurations.each { configuration -> resolve(configuration) }
+    project.configurations.each { configuration -> resolve(configuration) }
+}
