--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.moowork.node' version '1.1.1'
+    id 'com.wiredforcode.spawn' version '0.8.2'
 }
 
 apply plugin: 'com.moowork.node'
@@ -43,6 +44,18 @@ task clean() {
 }
 
 task check(dependsOn: test)
+
+task startServer(type: SpawnProcessTask) {
+    command 'npm start'
+    ready 'webpack: Compiled successfully.'
+    directory = "${projectDir}"
+    pidLockFileName 'build/frontend.lock'
+}
+
+task stopServer(type: KillProcessTask) {
+    pidLockFileName 'build/frontend.lock'
+    directory = "${projectDir}"
+}
 
 sonarqube {
     properties {
