Replace SubscriptionService.find(...) with Redux store.

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -23,6 +23,7 @@
     "ng-redux": "3.5.2",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
+    "reselect": "3.0.1",
     "timeago.js": "3.0.1"
   },
   "devDependencies": {
