--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -14,12 +14,12 @@
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
-    "angular-hotkeys": "1.5.0",
     "angular-material": "1.1.4",
     "angular-messages": "1.5.8",
     "angular-sanitize": "1.5.8",
     "angular-ui-router": "0.2.18",
     "material-design-icons": "3.0.1",
+    "mousetrap": "1.6.1",
     "ng-redux": "3.5.2",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
