--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 
-sudo: false
+# 11.01.2018 Travis CI regression. See also https://github.com/travis-ci/travis-ci/issues/8836
+sudo: required
 
 addons:
   sonarcloud:
