--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: java
 jdk:
   - oraclejdk8
 
-# 11.01.2018 Travis CI regression. See also https://github.com/travis-ci/travis-ci/issues/8836
-sudo: required
-
 addons:
   sonarcloud:
     organization: "ksokol-github"
@@ -12,7 +9,7 @@ addons:
       secure: "GRaTBAwL9tHxCULbGDDZeHaSSvfUTTtEKCywZYCokO0XO5s5G4FN1koKM16ip9uH7pKeGfd6hi5MjiEqHvXphXGgu9qXDYpSFtnGB1I+Ixn2s/mEu6MXa+yURsxEH3UMGrhQoIn6SSFrNwtNa1B6Z4SIvFRvfjyI/f++Owp9jC8="
     github_token:
       secure: "FGx+8MjV6GUjM/HM4D4MnwnJFRwPIi7WeJ8dsc1xQY08S0aCtQHGXSze01xbhrVNb3jeztzwWHLMuFzWpJy75L6v74XflsOroE0RE/AKEK8IcqMk5QuwRC/jpJNur2lPGFVV7i9KAbxcAOc/TX/6WfwDWI7LyHyjRnY+GWzXlDo="
-  chrome: stable
+  firefox: 57.0
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
