--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -11,13 +11,13 @@
     "report": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
+    "@uirouter/angularjs": "1.0.13",
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
     "angular-material": "1.1.4",
     "angular-messages": "1.5.8",
     "angular-sanitize": "1.5.8",
-    "angular-ui-router": "0.3.2",
     "material-design-icons": "3.0.1",
     "mousetrap": "1.6.1",
     "ng-redux": "3.5.2",
