--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -25,7 +25,7 @@ task resolve(dependsOn: npm_install) {
 }
 
 task dependencyCheckAnalyze(type: NpmTask, dependsOn: npm_install) {
-    args = ['run', 'nsp']
+    args = ['run', 'snyk']
 }
 
 task test(overwrite: true, dependsOn: [npm_install, npm_test]) {
