--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "myreader-frontend",
   "description": "Myreader frontend package",
   "scripts": {
-    "nsp": "nsp check --thershold 7",
+    "snyk": "snyk test",
     "build": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile --display-optimization-bailout",
     "server": "export NODE_ENV=development && webpack-dev-server --history-api-fallback --inline --progress",
     "test": "export NODE_ENV=development && karma start",
@@ -42,8 +42,8 @@
     "istanbul-instrumenter-loader": "3.0.0",
     "jasmine-core": "2.8.0",
     "karma": "1.7.1",
-    "karma-firefox-launcher": "1.1.0",
     "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-firefox-launcher": "1.1.0",
     "karma-jasmine": "1.1.0",
     "karma-sonarqube-unit-reporter": "0.0.13",
     "karma-sourcemap-loader": "0.3.7",
@@ -56,12 +56,12 @@
     "raw-loader": "0.5.1",
     "redux-mock-store": "1.3.0",
     "rimraf": "2.6.2",
+    "snyk": "1.69.7",
     "style-loader": "0.19.0",
     "svg-url-loader": "2.2.1",
     "webpack": "3.8.1",
     "webpack-bundle-analyzer": "2.9.0",
-    "webpack-dev-server": "2.9.3",
-    "nsp": "3.1.0"
+    "webpack-dev-server": "2.9.3"
   },
   "directories": {
     "test": "test"
