--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -3,12 +3,12 @@
   "description": "Myreader frontend package",
   "scripts": {
     "snyk": "snyk test",
-    "build": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile --display-optimization-bailout",
+    "build": "export NODE_ENV=production && webpack --bail --progress --profile --display-optimization-bailout",
     "server": "export NODE_ENV=development && webpack-dev-server --history-api-fallback --inline --progress",
     "test": "export NODE_ENV=development && karma start",
     "test-watch": "export NODE_ENV=development && npm test -- --single-run=false --reporters=progress,coverage-istanbul",
     "start": "npm run server",
-    "report": "export NODE_ENV=production && rimraf dist && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json"
+    "report": "export NODE_ENV=production && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json"
   },
   "dependencies": {
     "@uirouter/angularjs": "1.0.14",
@@ -33,6 +33,7 @@
     "babel-plugin-angularjs-annotate": "0.8.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
+    "clean-webpack-plugin": "0.1.18",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
     "extract-text-webpack-plugin": "3.0.1",
@@ -53,7 +54,6 @@
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "raw-loader": "0.5.1",
     "redux-mock-store": "1.3.0",
-    "rimraf": "2.6.2",
     "snyk": "1.69.7",
     "style-loader": "0.19.0",
     "svg-url-loader": "2.2.1",
