--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -36,6 +36,8 @@
     "clean-webpack-plugin": "0.1.18",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
+    "eslint": "4.18.2",
+    "eslint-plugin-jasmine": "2.9.3",
     "extract-text-webpack-plugin": "3.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "1.1.5",
@@ -63,5 +65,21 @@
   },
   "directories": {
     "test": "test"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "jasmine": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
+    "plugins": [
+      "jasmine"
+    ],
+    "extends": [
+      "plugin:jasmine/recommended"
+    ]
   }
 }
