Enable support for object rest/spread in ESLint.

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -73,7 +73,10 @@
     },
     "parserOptions": {
       "ecmaVersion": 6,
-      "sourceType": "module"
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true
+      }
     },
     "plugins": [
       "jasmine"
