--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -8,7 +8,8 @@
     "test": "export NODE_ENV=development && karma start",
     "test-watch": "export NODE_ENV=development && npm test -- --single-run=false --reporters=progress,coverage-istanbul",
     "start": "npm run server",
-    "report": "export NODE_ENV=production && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json"
+    "report": "export NODE_ENV=production && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json",
+    "lint": "eslint -c .eslintrc.js src/app/js"
   },
   "dependencies": {
     "@uirouter/angularjs": "1.0.14",
