--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -67,7 +67,7 @@ sonarqube {
         property "sonar.exclusions", ["**/*.spec.js", "**/test-utils.js"]
         property "sonar.tests", ["${projectDir}/src/app/js"]
         property "sonar.test.inclusions", ["**/*.spec.js"]
-        property "sonar.javascript.lcov.reportPaths", "${buildDir}/reports/istanbul/lcov.info"
+        property "sonar.javascript.lcov.reportPaths", "${buildDir}/reports/coverage/lcov.info"
         property "sonar.testExecutionReportPaths", "${buildDir}/TESTS.xml"
     }
 }
