--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -5,8 +5,8 @@
     "snyk": "snyk test",
     "build": "export NODE_ENV=production && webpack --bail --progress --profile --display-optimization-bailout",
     "server": "export NODE_ENV=development && webpack-dev-server --history-api-fallback --inline --progress",
-    "test": "export NODE_ENV=development && karma start",
-    "test-watch": "export NODE_ENV=development && npm test -- --single-run=false --reporters=progress,coverage-istanbul",
+    "test": "export NODE_ENV=test && jest --coverage --ci --silent",
+    "test-watch": "export NODE_ENV=test && jest --watch",
     "start": "npm run server",
     "report": "export NODE_ENV=production && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json",
     "lint": "eslint -c .eslintrc.js src/app/js"
@@ -25,6 +25,7 @@
   "devDependencies": {
     "angular-mocks": "1.6.9",
     "babel-core": "6.26.0",
+    "babel-jest": "22.4.3",
     "babel-loader": "7.1.2",
     "babel-plugin-angularjs-annotate": "0.8.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -33,21 +34,19 @@
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
     "eslint": "4.18.2",
-    "eslint-plugin-jasmine": "2.9.3",
+    "eslint-plugin-jest": "21.15.1",
     "extract-text-webpack-plugin": "3.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "1.1.5",
+    "html-loader-jest": "0.2.1",
     "html-webpack-plugin": "2.30.1",
-    "istanbul-instrumenter-loader": "3.0.0",
-    "jasmine-core": "2.8.0",
-    "karma": "1.7.1",
-    "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-firefox-launcher": "1.1.0",
-    "karma-jasmine": "1.1.0",
-    "karma-sonarqube-unit-reporter": "0.0.13",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.5",
+    "intersection-observer": "0.5.0",
+    "jest": "22.4.3",
+    "jest-css-modules-transform": "1.1.0",
+    "jest-fetch-mock": "1.5.0",
+    "jest-sonar-reporter": "2.0.0",
     "lodash.ismatch": "4.4.0",
+    "mock-local-storage": "1.0.5",
     "null-loader": "0.1.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "raw-loader": "0.5.1",
@@ -62,23 +61,8 @@
   "directories": {
     "test": "test"
   },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "jasmine": true
-    },
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "experimentalObjectRestSpread": true
-      }
-    },
-    "plugins": [
-      "jasmine"
-    ],
-    "extends": [
-      "plugin:jasmine/recommended"
-    ]
+  "jestSonar": {
+    "reportPath": "build",
+    "reportFile": "TESTS.xml"
   }
 }
