--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,6 +17,10 @@
     "angular-sanitize": "1.6.9",
     "material-design-icons": "3.0.1",
     "ng-redux": "3.5.2",
+    "ngreact": "0.5.1",
+    "prop-types": "15.6.1",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "reselect": "3.0.1",
@@ -30,11 +34,13 @@
     "babel-plugin-angularjs-annotate": "0.8.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "0.1.18",
     "css-loader": "0.28.7",
     "cssnano": "3.10.0",
     "eslint": "4.18.2",
     "eslint-plugin-jest": "21.15.1",
+    "eslint-plugin-react": "7.8.2",
     "extract-text-webpack-plugin": "3.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "1.1.5",
@@ -50,6 +56,7 @@
     "null-loader": "0.1.1",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "raw-loader": "0.5.1",
+    "react-test-renderer": "16.3.2",
     "redux-mock-store": "1.3.0",
     "snyk": "1.71.0",
     "style-loader": "0.19.0",
