--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@uirouter/angularjs": "1.0.14",
     "angular": "1.6.9",
+    "classnames": "2.2.5",
     "material-design-icons": "3.0.1",
     "ng-redux": "3.5.2",
     "ngreact": "0.5.1",
