--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,6 +17,7 @@
     "@uirouter/angularjs": "1.0.14",
     "angular": "1.6.9",
     "classnames": "2.2.5",
+    "lodash.debounce": "4.0.8",
     "material-design-icons": "3.0.1",
     "ng-redux": "3.5.2",
     "ngreact": "0.5.1",
