--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -44,7 +44,6 @@
     "eslint": "5.2.0",
     "eslint-plugin-jest": "21.18.0",
     "eslint-plugin-react": "7.10.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "1.1.11",
     "html-loader-jest": "0.2.1",
@@ -55,20 +54,21 @@
     "jest-fetch-mock": "1.6.5",
     "jest-sonar-reporter": "2.0.0",
     "lodash.ismatch": "4.4.0",
+    "mini-css-extract-plugin": "0.4.1",
     "mock-local-storage": "1.0.5",
     "null-loader": "0.1.1",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "optimize-css-assets-webpack-plugin": "5.0.0",
     "raw-loader": "0.5.1",
     "react-test-renderer": "16.4.2",
     "redux-mock-store": "1.5.3",
     "snyk": "1.90.0",
-    "style-loader": "0.21.0",
     "stylelint": "9.4.0",
     "stylelint-config-standard": "18.2.0",
     "svg-url-loader": "2.3.2",
-    "webpack": "3.8.1",
+    "webpack": "4.16.4",
     "webpack-bundle-analyzer": "2.13.1",
-    "webpack-dev-server": "2.11.2"
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.5"
   },
   "directories": {
     "test": "test"
