--- a/myreader-frontend/.babelrc
+++ b/myreader-frontend/.babelrc
@@ -1,4 +1,27 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-object-rest-spread", ["angularjs-annotate", {"explicitOnly" : true}]]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": [
+            "Firefox >= 60",
+            "FirefoxAndroid >= 60",
+            "Chrome >= 67",
+            "ChromeAndroid >= 67"
+          ]
+        }
+      }
+    ],
+    "react"
+  ],
+  "plugins": [
+    "transform-object-rest-spread",
+    [
+      "angularjs-annotate",
+      {
+        "explicitOnly": true
+      }
+    ]
+  ]
 }
