--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -44,7 +44,6 @@
     "eslint": "5.2.0",
     "eslint-plugin-jest": "21.18.0",
     "eslint-plugin-react": "7.10.0",
-    "favicons-webpack-plugin": "0.0.9",
     "file-loader": "1.1.11",
     "html-loader-jest": "0.2.1",
     "html-webpack-plugin": "3.2.0",
@@ -69,7 +68,8 @@
     "webpack": "4.16.4",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5"
+    "webpack-dev-server": "3.1.5",
+    "webpack-pwa-manifest": "3.7.1"
   },
   "directories": {
     "test": "test"
