--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -41,6 +41,8 @@
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "1.0.0",
     "cssnano": "4.0.5",
+    "enzyme": "3.5.0",
+    "enzyme-adapter-react-16.3": "1.1.0",
     "eslint": "5.4.0",
     "eslint-plugin-jest": "21.21.0",
     "eslint-plugin-react": "7.11.1",
