--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -30,14 +30,15 @@
     "timeago.js": "3.0.2"
   },
   "devDependencies": {
+    "@babel/core": "7.0.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
     "angular-mocks": "1.7.4",
-    "babel-core": "6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "7.1.5",
+    "babel-loader": "8.0.2",
     "babel-plugin-angularjs-annotate": "0.9.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "1.0.0",
     "cssnano": "4.1.0",
