--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -18,6 +18,7 @@
     "angular": "1.7.4",
     "classnames": "2.2.6",
     "lodash.debounce": "4.0.8",
+    "lodash.isequal": "4.5.0",
     "material-design-icons": "3.0.1",
     "ng-redux": "4.0.3",
     "ngreact": "0.5.1",
