--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-data'
     compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.4.0.Final'
     compile group: 'org.hsqldb', name: 'hsqldb'
+    compile group: 'org.flywaydb', name: 'flyway-core'
     compile group: 'com.rometools', name: 'rome', version: '1.5.1'
     compile(group: 'org.apache.httpcomponents', name: 'httpclient') {
         exclude(module: 'commons-logging')
