--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -6,11 +6,15 @@ spring.datasource.url=jdbc:hsqldb:data/hsqldb/myreader;shutdown=true;hsqldb.defa
 spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+
 spring.mandatory-file-encoding=UTF-8
 
 spring.hateoas.use-hal-as-default-json-media-type=false
 
-spring.jpa.hibernate.ddl-auto=update
+flyway.baseline-on-migrate=true
+flyway.baseline-version=1
+
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
