--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -25,6 +25,7 @@
     "prop-types": "15.6.2",
     "react": "16.5.2",
     "react-dom": "16.5.2",
+    "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-thunk": "2.3.0",
     "reselect": "3.0.1",
