--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -14,6 +14,10 @@
     "lint:css": "stylelint \"src/app/js/**/*.css\" && stylelint \"src/app/css/**/*.css\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.7",
+    "@fortawesome/free-regular-svg-icons": "5.4.2",
+    "@fortawesome/free-solid-svg-icons": "5.4.2",
+    "@fortawesome/react-fontawesome": "0.1.3",
     "@uirouter/angularjs": "1.0.20",
     "angular": "1.7.5",
     "classnames": "2.2.6",
