--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -20,12 +20,14 @@
     "@uirouter/angularjs": "1.0.20",
     "angular": "1.7.5",
     "classnames": "2.2.6",
+    "dialog-polyfill": "0.4.10",
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "ng-redux": "4.1.0",
     "ngreact": "0.5.1",
     "prop-types": "15.6.2",
     "react": "16.6.0",
+    "react-color": "2.14.1",
     "react-dom": "16.6.0",
     "react-redux": "5.1.0",
     "redux": "4.0.1",
