--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -21,6 +21,7 @@
     "angular": "1.7.5",
     "classnames": "2.2.6",
     "dialog-polyfill": "0.4.10",
+    "downshift": "3.1.7",
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "ng-redux": "4.1.0",
