--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.7",
     "@fortawesome/free-solid-svg-icons": "5.4.2",
     "@fortawesome/react-fontawesome": "0.1.3",
+    "@jaames/iro": "3.5.4",
     "@uirouter/angularjs": "1.0.20",
     "angular": "1.7.5",
     "classnames": "2.2.6",
@@ -28,7 +29,6 @@
     "ngreact": "0.5.1",
     "prop-types": "15.6.2",
     "react": "16.6.0",
-    "react-color": "2.14.1",
     "react-dom": "16.6.0",
     "react-redux": "5.1.0",
     "redux": "4.0.1",
