--- a/myreader-frontend/.babelrc
+++ b/myreader-frontend/.babelrc
@@ -16,12 +16,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-object-rest-spread",
-    [
-      "angularjs-annotate",
-      {
-        "explicitOnly": true
-      }
-    ]
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
