--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -18,14 +18,13 @@
     "@fortawesome/free-solid-svg-icons": "5.4.2",
     "@fortawesome/react-fontawesome": "0.1.3",
     "@jaames/iro": "3.5.4",
-    "@uirouter/angularjs": "1.0.20",
-    "angular": "1.7.5",
+    "@uirouter/core": "5.0.21",
+    "@uirouter/react": "0.8.7",
     "classnames": "2.2.6",
     "dialog-polyfill": "0.4.10",
     "downshift": "3.1.7",
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
-    "ngreact": "0.5.1",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
@@ -40,7 +39,6 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
-    "angular-mocks": "1.7.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
