--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -49,9 +49,8 @@ dependencies {
     }
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
-    compile group: 'com.google.guava', name: 'guava', version: '21.0'
-    compile group: 'com.googlecode.owasp-java-html-sanitizer', name: 'owasp-java-html-sanitizer', version: '20180219.1'
-
+    compile group: 'com.google.guava', name: 'guava', version: '24.1.1-jre' // CVE 19.0 owasp-java-html-sanitizer
+    compile group: 'com.googlecode.owasp-java-html-sanitizer', name: 'owasp-java-html-sanitizer', version: '20181114.1'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     testCompile group: 'org.springframework.security', name: 'spring-security-test'
     testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '1.1.5'
