--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.dependencyCheckVersion = '3.1.2'
+    ext['flyway.version'] = '4.2.0'
 
     repositories {
         mavenCentral()
